fixed light to dark mode bug, replaced FA menu icon

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 
 body {
@@ -40,11 +40,37 @@ body {
     top: 2px;
     color: #fff;
     background: rgba(15, 15, 15);
-    padding: 14px;
-    font-size: 20px;
+    padding: 20px 12px;
     border-radius: 3px;
     border: none;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+}
+
+.burger {
+    height: 4px;
+    width: 25px;
+    border-radius: 2px;
+    background-color: #fff;
+    position: relative;
+    pointer-events: none;
+}
+.burger::before, .burger::after {
+    content: "";
+    position: absolute;
+    height: 4px;
+    width: 25px;
+    border-radius: 2px;
+    background-color: #fff;
+}
+.burger::before {
+    transform: translateY(-10px);
+}
+.burger::after {
+    transform: translateY(10px);
 }
 
 .menu-btns {
@@ -82,6 +108,7 @@ body {
 
 .kanji {
     background: rgb(15, 15, 15, 0.7);
+    color: rgb(228, 228, 228);
     font-size: 9em;
     padding: 0 25px;
     border: rgb(82, 82, 82) solid 4px;
